argocd/platform/observability/vmui-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vmui-route
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: default
  hostnames:
    - vm.192.168.33.100.nip.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: vm-server
          port: 8428
